--- a/components/account-page.templ
+++ b/components/account-page.templ
@@ -3,10 +3,6 @@ package components
 import "autojob/models"
 
 templ AccountPage(user models.User) {
-	@Dashboard(user, "Account") {
-		// @Experience()
-		// <div hx-get="/experience/" hx-trigger="load once" hx-swap="outerHTML">
-		// 	<span>Loading...</span>
-		// </div>
+	@Layout("Account", true) {
 	}
 }
