--- a/components/layout.templ
+++ b/components/layout.templ
@@ -26,7 +26,7 @@ templ Layout(title string, isLoggedIn bool) {
 				<p>A simple site that helps you find a job through automation and AI.</p>
 				<nav>
 					if isLoggedIn {
-						<a href="/">Account</a> |
+						<a href="/account">Account</a> |
 						<a href="/job-history">Job History</a> |
 						<a href="/cover-letter">Cover Letter</a> |
 						<a href="/settings">Settings</a> |
