--- a/components/letter-page.templ
+++ b/components/letter-page.templ
@@ -2,7 +2,7 @@ package components
 
 import "autojob/models"
 
-templ CoverLetterPage(user models.User) {
+templ LetterPage(user models.User) {
 	@Layout("Cover Letter", true) {
 		<fieldset>
 			<legend>Cover Letter</legend>
