feat: add search term to user object

--- a/components/signup-page.templ
+++ b/components/signup-page.templ
@@ -19,6 +19,10 @@ templ SignupPage() {
 						<input name="email" id="email" type="email" required/>
 					</div>
 					<div>
+						<label for="search_term">Search term:</label>
+						<input name="search_term" id="search_term" type="text" required/>
+					</div>
+					<div>
 						<label for="password">Password:</label>
 						<input name="password" id="password" type="password" required/>
 					</div>
