--- a/components/settings-form.templ
+++ b/components/settings-form.templ
@@ -8,6 +8,7 @@ templ SettingsForm(user models.User, method string) {
 			@SettingsInput(user.FirstName, "text", "first_name", "First name: ", false)
 			@SettingsInput(user.LastName, "text", "last_name", "Last name: ", false)
 			@SettingsInput(user.Email, "email", "email", "Email: ", false)
+			@SettingsInput(user.SearchTerm, "text", "search_term", "Search term: ", false)
 			@SettingsInput("", "password", "password", "Password: ", false)
 			<button type="submit">
 				<span>Update</span>
@@ -19,6 +20,7 @@ templ SettingsForm(user models.User, method string) {
 			@SettingsInput(user.FirstName, "text", "first_name", "First name: ", true)
 			@SettingsInput(user.LastName, "text", "last_name", "Last name: ", true)
 			@SettingsInput(user.Email, "email", "email", "Email: ", true)
+			@SettingsInput(user.SearchTerm, "text", "search_term", "Search term: ", true)
 			@SettingsInput("******", "password", "password", "Password: ", true)
 			<button type="submit">
 				<span>Edit</span>
