--- a/components/layout.templ
+++ b/components/layout.templ
@@ -29,6 +29,7 @@ templ Layout(title string, isLoggedIn bool) {
 						<a href="/account">Account</a> |
 						<a href="/job-history">Job History</a> |
 						<a href="/cover-letter">Cover Letter</a> |
+						<a href="/search-terms">Search Terms</a> |
 						<a href="/settings">Settings</a> |
 						<a href="/auth/logout">Log out</a> |
 					} else {
