--- a/components/layout.templ
+++ b/components/layout.templ
@@ -34,6 +34,7 @@ templ Layout(title string, isLoggedIn bool) {
 						<a href="/auth/logout">Log out</a> |
 					} else {
 						<a href="/">Home</a> |
+						<a href="/account">Account</a> |
 						<a href="/sign-up">Sign up</a> |
 					}
 				</nav>
