--- a/components/letter-page.templ
+++ b/components/letter-page.templ
@@ -26,9 +26,9 @@ templ LetterPage(letter models.Letter) {
 					<br/>
 					<button
 						hx-delete="/letter/"
-						hx-select="#letter-form"
+						hx-select="fieldset"
+						hx-target="closest fieldset"
 						hx-swap="outerHTML"
-						hx-target="closest form"
 						hx-confirm={ "Are you sure you wish to delete this cover letter?" }
 					>
 						<span>Delete</span>
