feat: update name

--- a/components/admin-page.templ
+++ b/components/admin-page.templ
@@ -27,7 +27,7 @@ templ AdminPage(users *[]models.User) {
 				vertical-align: top;
 			}
 			</style>
-			<title>AUTO JOB - ADMIN</title>
+			<title>GET JOB - ADMIN</title>
 		</head>
 		<body>
 			<header>
