--- a/components/layout.templ
+++ b/components/layout.templ
@@ -24,11 +24,11 @@ templ Layout(title string, isLoggedIn bool) {
 				vertical-align: top;
 			}
 			</style>
-			<title>AUTO JOB - { title }</title>
+			<title>GET JOB - { title }</title>
 		</head>
 		<body>
 			<header>
-				<h1>AUTO JOB</h1>
+				<h1>GET JOB</h1>
 				<p>A simple site that helps you find a job through automation and AI.</p>
 				<nav>
 					if isLoggedIn {
