feat: add password complexity notice

--- a/components/signup-page.templ
+++ b/components/signup-page.templ
@@ -27,6 +27,23 @@ templ SignupPage() {
 					</button>
 					<span id="response"></span>
 				</form>
+				<ul>
+					<li>
+						Password must be at least 8 characters long.
+					</li>
+					<li>
+						Password must contain at least one uppercase letter.
+					</li>
+					<li>
+						Password must contain at least one lowercase letter.
+					</li>
+					<li>
+						Password must contain at least one number.
+					</li>
+					<li>
+						Password must contain at least one special character.
+					</li>
+				</ul>
 			</fieldset>
 			<p>
 				<span>
